# pybo

./: db.sqlite3  pyproject.toml
common/: forms.py  urls.py  views.py
config/: settings.py  urls.py
pybo/: admin.py  forms.py  models.py  urls.py
pybo/migrations/: 0001_initial.py  0002_question_author.py  0003_answer_author.py  0004_answer_modify_date_question_modify_date.py  0005_comment.py  0006_answer_voter_question_voter_alter_answer_author_and_more.py
pybo/templatetags/: pybo_filter.py
pybo/views/: answer_views.py  base_views.py  comment_views.py  question_views.py  vote_views.py
static/: style.css
templates/: base.html  form_errors.html  navbar.html
templates/common/: login.html  signup.html
templates/pybo/: answer_form.html  comment_form.html  question_detail.html  question_form.html  question_list.html
